add API delete chapter
