# app/routes/chapter.js
@@ -8,6 +8,7 @@ const validationId = require('../middleware/validation');
 route.post('/', authenticate, checkRole('admin'), chapterController.createChapter);
 route.get('/', chapterController.getAllChapters);
 route.patch('/:id', authenticate, checkRole('admin'), validationId('Chapter'), chapterController.updateChapter);
+route.delete('/:id', authenticate, checkRole('admin'), validationId('Chapter'), chapterController.deleteChapter);
 route.get('/:id', validationId('Chapter'), chapterController.getChapterById);
 
 module.exports = route;
